# geo-rdm-records

./: .dockerignore  .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
geo_rdm_records/: __init__.py  config.py  ext.py  proxies.py  searchapp.py  tasks.py  validation.py  version.py  webpack.py
geo_rdm_records/alembic/: 081eb89a9035_create_marketplace_tables.py  14df88fb94fa_create_knowledge_package_tables.py  15a1212e33c4_create_geo_rdm_records_revision.py  357f00b65029_create_geo_rdm_records_tables.py  357f00b65029_create_knowledge_package_tables.py  __init__.py
geo_rdm_records/base/: __init__.py
geo_rdm_records/base/records/: __init__.py  api.py  categories.py  types.py
geo_rdm_records/base/records/systemfields/: __init__.py  common.py  proxy.py  relations.py  relationship.py
geo_rdm_records/base/requests/: __init__.py  community_submission.py  resolver.py
geo_rdm_records/base/resources/: __init__.py  args.py  config.py  decorators.py  serializers.py
geo_rdm_records/base/resources/schema/: __init__.py
geo_rdm_records/base/services/: __init__.py  config.py  facets.py  generators.py  links.py  permissions.py  requests.py  results.py  search.py  service.py
geo_rdm_records/base/services/components/: __init__.py  constraints.py  harvester.py  themes.py
geo_rdm_records/base/services/params/: __init__.py  facets.py
geo_rdm_records/base/services/schemas/: __init__.py  funding.py  harvester.py  location.py  metadata.py  parent.py  records.py  relationship.py  validator.py
geo_rdm_records/customizations/records/: api.py
geo_rdm_records/customizations/records/systemfields/: relationship.py
geo_rdm_records/customizations/requests/: __init__.py  resolver.py
geo_rdm_records/customizations/resources/: config.py  resource.py
geo_rdm_records/customizations/services/: config.py  service.py
geo_rdm_records/customizations/services/components/: relationship.py
geo_rdm_records/customizations/services/iiif/: service.py
geo_rdm_records/customizations/services/review/: __init__.py  service.py
geo_rdm_records/customizations/services/schemas/: __init__.py  relationship.py
geo_rdm_records/modules/: __init__.py  class_factory.py
geo_rdm_records/modules/checker/: __init__.py  config.py  schema.py  tasks.py
geo_rdm_records/modules/checker/base/: __init__.py  metadata.py  records.py  report.py  stats.py
geo_rdm_records/modules/checker/links/: __init__.py  records.py  validation.py
geo_rdm_records/modules/checker/records/: records.py  validation.py
geo_rdm_records/modules/cms/: __init__.py  tasks.py
geo_rdm_records/modules/cms/services/: __init__.py  config.py  service.py
geo_rdm_records/modules/iiif/: __init__.py  service.py
geo_rdm_records/modules/marketplace/: __init__.py
geo_rdm_records/modules/marketplace/records/: __init__.py  api.py  models.py
geo_rdm_records/modules/marketplace/requests/: __init__.py  resolver.py
geo_rdm_records/modules/marketplace/resources/: __init__.py  config.py  resource.py
geo_rdm_records/modules/marketplace/services/: __init__.py  config.py  permissions.py  service.py
geo_rdm_records/modules/members/: __init__.py  errors.py
geo_rdm_records/modules/members/records/: __init__.py  api.py  models.py
geo_rdm_records/modules/members/resources/: __init__.py
geo_rdm_records/modules/members/services/: __init__.py
geo_rdm_records/modules/rdm/: __init__.py
geo_rdm_records/modules/rdm/records/: api.py
geo_rdm_records/modules/rdm/resources/: __init__.py  config.py  resource.py
geo_rdm_records/modules/rdm/services/: config.py  service.py
geo_rdm_records/modules/requests/: __init__.py  services.py
geo_rdm_records/modules/requests/community/: __init__.py  config.py  submission.py
geo_rdm_records/modules/requests/notification/: __init__.py  handler.py  tasks.py
geo_rdm_records/modules/requests/services/: config.py  permissions.py  service.py
geo_rdm_records/modules/resources/: __init__.py
geo_rdm_records/modules/resources/records/: api.py
geo_rdm_records/modules/resources/requests/: __init__.py  resolver.py
geo_rdm_records/modules/resources/resources/: config.py  resource.py
geo_rdm_records/modules/resources/services/: config.py  service.py
geo_rdm_records/modules/search/: __init__.py
geo_rdm_records/modules/search/resources/: __init__.py  config.py  resource.py
geo_rdm_records/modules/search/services/: __init__.py  config.py  links.py  results.py  (+1 more)
geo_rdm_records/modules/security/: __init__.py  permissions.py  policies.py
geo_rdm_records/records/: __init__.py  api.py
geo_rdm_records/records/jsonschemas/: __init__.py
geo_rdm_records/resources/: args.py  config.py
geo_rdm_records/services/: __init__.py  config.py  facets.py
geo_rdm_records/services/components/: __init__.py  knowledge_package.py
geo_rdm_records/services/params/: facets.py  search.py
geo_rdm_records/services/schemas/: __init__.py  metadata.py  parent.py
geo_rdm_records/validation/: __init__.py  config.py  links.py  records.py  report.py  tasks.py
geo_rdm_records/views/: __init__.py  api.py  packages.py  ui.py
tests/: conftest.py  fake_datacite_client.py  test_alembic.py  test_base_jsonschema.py  test_geo_rdm_records.py
tests/base/services/: test_generators.py
tests/customizations/resources/: test_resource_resources.py
tests/customizations/services/: test_resource_review_service.py  test_resource_services.py
tests/rdm/resources/: test_resource_resources.py
tests/rdm/services/: test_resource_review_service.py  test_resource_services.py
tests/resources/resources/: test_resource_resources.py  test_resources.py
tests/resources/services/: test_resource_review_service.py  test_resource_services.py
tests/security/: conftest.py  test_ifisequal_generator.py
(+99 files in other folders)
