# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 Geo Secretariat.
#
# geo-rdm-records is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = geo-rdm-records
version = attr:geo_rdm_records.__version__
description = DataCite-based data model for GEO Knowledge Hub flavour.
long_description = file: README.rst, CHANGES.rst
keywords = Geospatial Invenio RDM DataCite DataModel
license = MIT
author = GEO Secretariat
author_email = secretariat@geosec.org
platforms = any
url = https://github.com/geo-knowledge-hub/geo-rdm-records
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-i18n>=1.2.0
    invenio-rdm-records @ git+https://github.com/geo-knowledge-hub/invenio-rdm-records@b-1.3
    importlib_metadata>=4.4;python_version<'3.8'

[options.extras_require]
docs =
    sphinx>=4.2.0,<5
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-app>=1.3.4
    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0
    pytest-invenio>=1.4.7
    pytest-mock>=1.6.0
    sphinx>=4.2.0,<5
    tripoli~=2.0.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=1.4.2,<2.0

[options.entry_points]
invenio_base.apps =
    geo_rdm_records = geo_rdm_records:GEORDMRecords
invenio_base.api_apps =
    geo_rdm_records = geo_rdm_records:GEORDMRecords
invenio_i18n.translations =
    messages = geo_rdm_records
invenio_search.mappings =
    geordmrecords = geo_rdm_records.records.mappings
invenio_jsonschemas.schemas =
    geo_rdm_records = geo_rdm_records.records.jsonschemas

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py
ignore = E203, W503, E501, W391

[compile_catalog]
directory = geo_rdm_records/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = Geo Secretariat
msgid_bugs_address = geokhub@geosec.org
mapping-file = babel.ini
output-file = geo_rdm_records/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = geo_rdm_records/translations/messages.pot
output-dir = geo_rdm_records/translations/

[update_catalog]
input-file = geo_rdm_records/translations/messages.pot
output-dir = geo_rdm_records/translations/

[isort]
profile = black

[check-manifest]
ignore =
    *-requirements.txt
    Vagrantfile
    bootstrap.sh

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=geo_rdm_records --cov-report=term-missing
testpaths = docs tests geo_rdm_records
