# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 Geo Secretariat.
#
# geo-rdm-records is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = geo-rdm-records
version = attr: geo_rdm_records.__version__
description = InvenioRDM Records for the GEO Knowledge Hub
long_description = file: README.rst, CHANGES.rst
keywords = invenio bibliographic records geo
license = MIT
author = GEO Secretariat
author_email = secretariat@geosec.org
platforms = any
url = https://github.com/geo-knowledge-hub/geo-rdm-records
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-i18n>=1.2.0
    invenio-rdm-records @ git+https://github.com/geo-knowledge-hub/invenio-rdm-records@v0.35.21
    invenio-geographic-identifiers @ git+https://github.com/geo-knowledge-hub/invenio-geographic-identifiers@v0.2.0

[options.extras_require]
docs =
    sphinx>=4.2.0,<5
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-app>=1.3.4
    pytest-invenio>=1.4.7
    pytest-mock>=1.6.0
    sphinx>=4.2.0,<5
    tripoli~=2.0.0
    invenio-db[postgresql,versioning]>=1.0.14,<2.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=1.4.2,<2.0

[options.entry_points]
invenio_base.apps =
    geo_rdm_records = geo_rdm_records:GEORDMRecords
invenio_base.api_apps =
    geo_rdm_records = geo_rdm_records:GEORDMRecords
invenio_base.api_blueprints =
    geo_rdm_records_packages = geo_rdm_records.views:create_packages_api_blueprint
    geo_rdm_records_packages_files = geo_rdm_records.views:create_packages_files_api_blueprint
    geo_rdm_records_draft_files = geo_rdm_records.views:create_draft_files_api_blueprint
    geo_rdm_records_parent_links = geo_rdm_records.views:create_parent_links_api_blueprint
invenio_base.blueprints =
    geo_rdm_records_packages_ext = geo_rdm_records.views:blueprint
invenio_i18n.translations =
    messages = geo_rdm_records
invenio_search.mappings =
    geordmrecords = geo_rdm_records.modules.resources.records.mappings
    geordmpackages = geo_rdm_records.modules.packages.records.mappings
    packagemembers = geo_rdm_records.modules.members.records.mappings
invenio_jsonschemas.schemas =
    geo_rdm_records = geo_rdm_records.modules.resources.records.jsonschemas
    geo_rdm_records_packages = geo_rdm_records.modules.packages.records.jsonschemas
invenio_db.models =
    geo_rdm_records_packages = geo_rdm_records.modules.packages.records.models
    geo_rdm_records_members = geo_rdm_records.modules.members.records.models

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py
ignore = E203, W503, E501, W391

[compile_catalog]
directory = geo_rdm_records/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = Geo Secretariat
msgid_bugs_address = geokhub@geosec.org
mapping-file = babel.ini
output-file = geo_rdm_records/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = geo_rdm_records/translations/messages.pot
output-dir = geo_rdm_records/translations/

[update_catalog]
input-file = geo_rdm_records/translations/messages.pot
output-dir = geo_rdm_records/translations/

[isort]
profile = black

[check-manifest]
ignore =
    *-requirements.txt
    Vagrantfile
    bootstrap*.sh

[tool:pytest]
addopts = --isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=geo_rdm_records --cov-report=term-missing
testpaths = docs tests geo_rdm_records
