# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 Geo Secretariat.
#
# geo-rdm-records is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = geo-rdm-records
version = attr: geo_rdm_records.__version__
description = InvenioRDM Records for the GEO Knowledge Hub
long_description = file: README.rst, CHANGES.rst
keywords = invenio bibliographic records geo
license = MIT
author = GEO Secretariat
author_email = secretariat@geosec.org
platforms = any
url = https://github.com/geo-knowledge-hub/geo-rdm-records
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    pydash>=7.0.6
    requests>=2.28.2
    retry-requests>=2.0.0,<2.1.0
    requests-cache>=1.1.0,<1.2.0
    invenio-i18n>=1.2.0
    invenio-oaiserver>=2.0.0,<2.2.0
    invenio-rdm-records @ git+https://github.com/geo-knowledge-hub/invenio-rdm-records@b-1.7

[options.extras_require]
docs =
    Sphinx>=4.5.0
tests =
    black<=23.12.1
    pytest-black>=0.3.0
    invenio-app>=1.3.4,<2.0.0
    invenio-db[tests]>=1.0.14,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=1.6.0
    sphinx>=4.5.0
    tripoli~=2.0.0
    requests-mock>=1.10.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_access.actions =
    geo-community-access = geo_rdm_records.modules.security.permissions:geo_community_access_action
    geo-provider-access = geo_rdm_records.modules.security.permissions:geo_provider_access_action
    geo-secretariat-access = geo_rdm_records.modules.security.permissions:geo_secretariat_access_action
invenio_base.apps =
    geo_rdm_records = geo_rdm_records:GEORDMRecords
invenio_base.api_apps =
    geo_rdm_records = geo_rdm_records:GEORDMRecords
invenio_base.api_blueprints =
    geo_rdm_records_packages_ext = geo_rdm_records.views:blueprint
    geo_rdm_records_packages = geo_rdm_records.views:create_packages_api_blueprint
    geo_rdm_records_packages_files = geo_rdm_records.views:create_packages_files_api_blueprint
    geo_rdm_records_draft_files = geo_rdm_records.views:create_draft_files_api_blueprint
    geo_rdm_records_parent_links = geo_rdm_records.views:create_parent_links_api_blueprint
    geo_rdm_records_search = geo_rdm_records.views:create_search_records_api_blueprint
    geo_rdm_records_packages_context = geo_rdm_records.views:create_packages_context_api_blueprint
    geo_rdm_records_marketplace = geo_rdm_records.views:create_marketplace_api_blueprint
    geo_rdm_records_marketplace_files = geo_rdm_records.views:create_marketplace_files_api_blueprint
    geo_rdm_records_marketplace_draft_files = geo_rdm_records.views:create_marketplace_draft_files_api_blueprint
invenio_base.blueprints =
    geo_rdm_records_packages_ext = geo_rdm_records.views:blueprint
    geo_rdm_records = geo_rdm_records.views:create_ui_blueprint
invenio_i18n.translations =
    messages = geo_rdm_records
invenio_search.mappings =
    geordmrecords = geo_rdm_records.modules.rdm.records.mappings
    geordmpackages = geo_rdm_records.modules.packages.records.mappings
    marketplaceitems = geo_rdm_records.modules.marketplace.records.mappings
invenio_jsonschemas.schemas =
    geo_rdm_records = geo_rdm_records.modules.rdm.records.jsonschemas
    geo_rdm_records_packages = geo_rdm_records.modules.packages.records.jsonschemas
    geo_rdm_records_marketplace = geo_rdm_records.modules.marketplace.records.jsonschemas
invenio_db.models =
    geo_rdm_records_packages = geo_rdm_records.modules.packages.records.models
    geo_rdm_records_marketplace = geo_rdm_records.modules.marketplace.records.models
invenio_requests.types =
    request_post = geo_rdm_records.modules.packages.requests:FeedPostRequest
    request_training = geo_rdm_records.modules.packages.requests:TrainingSessionRequest
invenio_requests.entity_resolvers =
    resources = geo_rdm_records.modules.rdm.requests.resolver:RecordResolver
    packages = geo_rdm_records.modules.packages.requests.resolver:PackageDraftResolver
    packages_record = geo_rdm_records.modules.packages.requests.resolver:PackageRecordResolver
    marketplace_item = geo_rdm_records.modules.marketplace.requests.resolver:MarketplaceItemDraftResolver
    marketplace_item_record = geo_rdm_records.modules.marketplace.requests.resolver:MarketplaceItemResolver
invenio_assets.webpack =
    geo_rdm_records = geo_rdm_records.webpack:theme
invenio_db.alembic =
    geo_rdm_records = geo_rdm_records:alembic
invenio_celery.tasks =
    geo_rdm_records_packages = geo_rdm_records.modules.packages.services.tasks
    geo_rdm_records_checker = geo_rdm_records.modules.checker.tasks
    geo_rdm_records_requests_notification = geo_rdm_records.modules.requests.notification.tasks

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[compile_catalog]
directory = geo_rdm_records/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = Geo Secretariat
msgid_bugs_address = geokhub@geosec.org
mapping-file = babel.ini
output-file = geo_rdm_records/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = geo_rdm_records/translations/messages.pot
output-dir = geo_rdm_records/translations/

[update_catalog]
input-file = geo_rdm_records/translations/messages.pot
output-dir = geo_rdm_records/translations/

[isort]
profile = black

[check-manifest]
ignore =
    Vagrantfile
    bootstrap*.sh
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=geo_rdm_records --cov-report=term-missing
testpaths = docs tests geo_rdm_records
